# Arcanum

./: .gitignore  README.md  SECURITY.md  SECURITY_AUDIT.md  build.gradle.kts  gradle.properties  release.sh  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/zip/arcanum/: ExampleInstrumentedTest.kt
app/src/androidTest/java/zip/arcanum/crypto/: NativeKatBridge.kt  NativeKatTest.kt
app/src/fdroid/java/zip/arcanum/billing/: BillingManager.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: whatsnew.json
app/src/main/cpp/: CMakeLists.txt  aes_openssl_wrap.c  arcanum_errors.h  arcanum_impl.h  arcanum_internal.h  arcanum_jni.cpp  crash_handler.cpp  crypto_core.cpp  jni_ext4.cpp  jni_files.cpp  jni_kat.cpp  jni_volume.cpp  kdf.cpp  vc_header.cpp
app/src/main/cpp/ext4/: ext4_alloc.c  ext4_alloc.h  ext4_create.c  ext4_create.h  ext4_csum.c  ext4_device.cpp  ext4_device.h  ext4_dir.c  ext4_dir.h  ext4_dirwrite.c  ext4_dirwrite.h  ext4_extents.c  ext4_extwrite.c  ext4_extwrite.h  ext4_ialloc.c  ext4_io.c  ext4_io.h  ext4_log.h  ext4_mkfs.c  ext4_mkfs.h  ext4_path.c  ext4_path.h
app/src/main/cpp/fatfs/: diskio.cpp  ff.c  ff.h  ffconf.h
app/src/main/cpp/veracrypt/Common/: Crypto.h  Endian.h  Tcdefs.h  Xts.h  cpu.h  misc.h
app/src/main/cpp/veracrypt/Crypto/: Aescpp.h  Aeskey.c  Aesopt.h  blake2.h  blake2s.c
app/src/main/java/zip/arcanum/: ArcanumApp.kt  MainActivity.kt
app/src/main/java/zip/arcanum/arcanum/backup/: BackupModels.kt  BackupScreen.kt  BackupService.kt  BackupSettingsRepository.kt  BackupSource.kt  BackupUploader.kt  BackupViewModel.kt  LocalFolderBackupUploader.kt  MegaAccountClient.kt  MegaAccountCrypto.kt  MegaBackupUploader.kt  S3BackupClientFactory.kt  S3BackupUploader.kt
app/src/main/java/zip/arcanum/arcanum/gallery/: AudioPlayerQueue.kt  ByteArrayMediaDataSource.kt  EncryptedDataSource.kt  ExifReader.kt  ImageBitmapDecoder.kt  JniMediaDataSource.kt  MediaScanner.kt  MediaViewerQueue.kt  ServiceEncryptedDataSource.kt  ThumbnailManager.kt  ThumbnailPreloader.kt
app/src/main/java/zip/arcanum/arcanum/saf/: VaultDocumentsProvider.kt
app/src/main/java/zip/arcanum/billing/: BillingManagerInterface.kt
app/src/main/java/zip/arcanum/core/theme/: Color.kt  (+4 more)
app/src/main/java/zip/arcanum/crypto/: CryptoResult.kt  FsUsage.kt  KeyfileGenerator.kt  NativeContainer.kt  NativeCrashHandler.kt  NativeFileInfo.kt  VeraCryptEngine.kt
app/src/main/java/zip/arcanum/onboarding/: OnboardingScreen.kt
app/src/main/java/zip/arcanum/settings/: ChangePinScreen.kt  ChangePinViewModel.kt  Confetti.kt  DebugViewModel.kt  DonationsScreen.kt  LicensesScreen.kt  PanicModeViewModel.kt  SetPanicPinScreen.kt  SetPanicPinViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt  WhatsNew.kt  WhatsNewScreen.kt
app/src/main/java/zip/arcanum/setup/: DisguiseUnlockScreen.kt  PinEntryScreen.kt  PinEntryViewModel.kt  SetupPinScreen.kt  SetupPinViewModel.kt
app/src/main/res/drawable/: ic_coin_bitcoin.xml  ic_coin_ethereum.xml  ic_coin_kofi.xml  ic_coin_lightning.xml  ic_coin_monero.xml  ic_coin_solana.xml  ic_coin_sponsors.xml  ic_launcher_background.xml  ic_launcher_calc_fg.xml  ic_launcher_calc_mono.xml  ic_launcher_custom_bg.xml  ic_launcher_custom_fg.xml  ic_launcher_flashlight_fg.xml  ic_launcher_foreground.xml  ic_launcher_mail_fg.xml  ic_launcher_stopwatch_bg.xml  ic_launcher_stopwatch_fg.xml  ic_launcher_system_fg.xml  ic_launcher_system_tools_bg.xml  ic_launcher_system_tools_fg.xml  ic_launcher_task_manager_fg.xml  ic_launcher_timer_fg.xml  ic_launcher_tools_fg.xml  ic_notification.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_calculator.xml  ic_launcher_custom_round.xml  ic_launcher_flashlight.xml  ic_launcher_mail_round.xml  ic_launcher_stopwatch_round.xml  ic_launcher_system_round.xml  ic_launcher_system_tools.xml  ic_launcher_task_manager.xml  ic_launcher_timer_round.xml  ic_launcher_tools_round.xml
app/src/main/res/raw/: empty_files.json
app/src/main/res/values/: drawables.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_provider_paths.xml  locales_config.xml  network_security_config.xml
app/src/playstore/java/zip/arcanum/billing/: BillingManager.kt
app/src/test/cpp/: keyfile_pool_equivalence.cpp
app/src/test/java/zip/arcanum/: ExampleUnitTest.kt
app/src/test/java/zip/arcanum/crypto/: CryptoKatTest.kt  ErrorCodeSyncTest.kt
audits/: SECURITY_AUDIT_2026-06-16.md  SECURITY_AUDIT_2026-06-19.md  SECURITY_AUDIT_2026-06-20.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 4.txt  5.txt  6.txt  7.txt  8.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/: zip.arcanum.yml
tests/: test_invariant_DebugViewModel.kt  test_invariant_arcanum_jni.cpp
tools/ext4/: .gitignore  alloc.c  appendcheck.py  bench  bench.c  build.sh  check.py  chunkcheck.py  chunkwrite.c  createcheck.py  dircheck.py  dirwcheck.py  dirwrite.c  ext4_alloc.c  ext4_alloc.h  ext4_create.c  ext4_create.h  ext4_csum.c  ext4_csum.h  ext4_dirwrite.c  ext4_dirwrite.h  ext4_extents.c  ext4_extents.h  ext4_extwrite.c  ext4_extwrite.h  ext4_ialloc.c  ext4_io.c  ext4_io.h  extwrite.c  fsckcheck.py  fsmeta  fsmeta.c  genimages.py  interopcheck.py  mkdircheck.py  mkfs.c  mkfscheck.py  mutants-alloc.sh  mutants-chunk.sh  mutants-create.sh  (+22 more)
(+158 files in other folders)
